[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cmake>=3.24",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "llcuda"
version = "0.1.0"
description = "CUDA-accelerated LLM inference for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Waqas Muhammad", email = "your.email@example.com"}
]
keywords = ["llm", "cuda", "gpu", "inference", "deep-learning", "llama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "sphinx>=4.5.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/waqasm86/local-llama-cuda"
Documentation = "https://github.com/waqasm86/local-llama-cuda#readme"
Repository = "https://github.com/waqasm86/local-llama-cuda"
"Bug Tracker" = "https://github.com/waqasm86/local-llama-cuda/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
